# rustle

crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/domain/: errors.rs  mod.rs  models.rs  ports.rs  service.rs
crates/core/src/outbound/: config.rs  metadata.rs  mod.rs  ssh.rs
crates/core/src/outbound/exec/: mod.rs  ssh.rs
crates/core/src/outbound/transfer/: mod.rs  planner.rs  sftp.rs
crates/core/tests/: service.rs
